[package]
name = "mediatime"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/findit-ai/mediatime"
homepage = "https://github.com/findit-ai/mediatime"
documentation = "https://docs.rs/mediatime"
description = "Exact-integer rational time types for media pipelines — FFmpeg-style Timebase, Timestamp, and TimeRange. no_std, zero dependencies, const fn."
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["media", "timebase", "timestamp", "pts", "ffmpeg"]
categories = ["multimedia", "multimedia::video", "date-and-time", "no-std", "no-std::no-alloc"]

[[bench]]
path = "benches/gcd.rs"
name = "gcd"
harness = false

[features]
default = []

[dependencies]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
