[package]
name = "mediatime"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/findit-ai/mediatime"
homepage = "https://github.com/findit-ai/mediatime"
documentation = "https://docs.rs/mediatime"
description = "Exact-integer rational time types for media pipelines — FFmpeg-style Timebase, Timestamp, and TimeRange. no_std, zero dependencies, const fn."
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["media", "timebase", "timestamp", "pts", "ffmpeg"]
categories = ["multimedia", "multimedia::video", "date-and-time", "no-std", "no-std::no-alloc"]

[[bench]]
path = "benches/gcd.rs"
name = "gcd"
harness = false

[features]
default = ["std"]
std = ["serde?/default"]

serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]
quickcheck = ["dep:quickcheck"]


[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
arbitrary = { version = "1", optional = true, default-features = false }
quickcheck = { version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.8"
quickcheck = "1"
arbitrary = "1"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
